--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sweeps Snapshot Pro</title>
   <script src="https://cdn.tailwindcss.com"></script>
 
@@ -12,8 +13,15 @@
     }
 
     .reel-container {
-      width: 110px;
-      height: 110px;
+  width: 80px;
+  height: 80px;
+}
+@media (min-width: 640px) {
+  .reel-container {
+    width: 110px;
+    height: 110px;
+  }
+}
       overflow: hidden;
       border: 3px solid #1f2937;
       border-radius: 10px;
@@ -54,14 +62,14 @@
   </style>
 </head>
 
-<body class="text-gray-200 min-h-screen p-8">
+<body class="text-gray-200 min-h-screen px-4 sm:px-8 py-6">
 
 <!-- SLOT HEADER -->
 <div class="text-center mb-12">
   <img src="logo.png" class="w-64 mx-auto mb-6">
 
-  <div class="machine bg-gray-900 p-6 rounded-xl border border-gray-800 inline-block">
-    <div class="flex gap-4 justify-center">
+  <div class="machine bg-gray-900 p-4 sm:p-6 rounded-xl border border-gray-800 w-full max-w-md mx-auto">
+    <div class="flex flex-col sm:flex-row gap-3 mb-6">
       <div class="reel-container"><div class="reel-strip" id="reel1"></div></div>
       <div class="reel-container"><div class="reel-strip" id="reel2"></div></div>
       <div class="reel-container"><div class="reel-strip" id="reel3"></div></div>
@@ -75,7 +83,7 @@
 </div>
 
 <!-- TOOL -->
-<h1 class="text-3xl font-semibold mb-2 tracking-wide">Sweeps Snapshot Pro</h1>
+<h1 class="text-2xl sm:text-3xl font-semibold mb-2 tracking-wide">Sweeps Snapshot Pro</h1>
 <p class="text-gray-400 mb-6">Edge scoring • Trap detection • Bankroll impact • CSV export</p>
 
 <div class="flex gap-4 mb-6 flex-wrap">
@@ -94,8 +102,9 @@
   />
 </div>
 
-<div class="overflow-x-auto">
+<div class="overflow-x-auto rounded-lg border border-gray-800">
 <table class="min-w-full text-sm">
+  class="min-w-full text-xs sm:text-sm"
 <thead class="bg-gray-800">
 <tr>
 <th class="p-3 text-left">Platform</th>
@@ -358,4 +367,5 @@ renderTable(promos);
 </script>
 
 </body>
+
 </html>
