--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     }
 
     .reel-container {
-  width: 80px;
-  height: 80px;
-}
-@media (min-width: 640px) {
-  .reel-container {
-    width: 110px;
-    height: 110px;
-  }
-}
+      width: 80px;
+      height: 80px;
       overflow: hidden;
       border: 3px solid #1f2937;
       border-radius: 10px;
       background: #111827;
       position: relative;
+    }
+
+    @media (min-width: 640px) {
+      .reel-container {
+        width: 110px;
+        height: 110px;
+      }
     }
 
     .reel-strip {
@@ -37,7 +37,7 @@
 
     .reel-strip img {
       width: 100%;
-      height: 110px;
+      height: 100%;
       object-fit: contain;
       padding: 8px;
     }
@@ -66,59 +66,63 @@
 
 <!-- SLOT HEADER -->
 <div class="text-center mb-12">
-  <img src="logo.png" class="w-64 mx-auto mb-6">
+  <img src="logo.png" class="w-48 sm:w-64 mx-auto mb-6">
 
   <div class="machine bg-gray-900 p-4 sm:p-6 rounded-xl border border-gray-800 w-full max-w-md mx-auto">
-    <div class="flex flex-col sm:flex-row gap-3 mb-6">
+    <div class="flex justify-center gap-3 mb-6">
       <div class="reel-container"><div class="reel-strip" id="reel1"></div></div>
       <div class="reel-container"><div class="reel-strip" id="reel2"></div></div>
       <div class="reel-container"><div class="reel-strip" id="reel3"></div></div>
     </div>
 
     <button onclick="spinReels()" 
-      class="mt-6 bg-green-600 hover:bg-green-700 px-6 py-2 rounded-lg font-semibold w-full">
+      class="bg-green-600 hover:bg-green-700 px-6 py-2 rounded-lg font-semibold w-full">
       Spin
     </button>
   </div>
 </div>
 
 <!-- TOOL -->
-<h1 class="text-2xl sm:text-3xl font-semibold mb-2 tracking-wide">Sweeps Snapshot Pro</h1>
-<p class="text-gray-400 mb-6">Edge scoring • Trap detection • Bankroll impact • CSV export</p>
+<h1 class="text-2xl sm:text-3xl font-semibold mb-2 tracking-wide text-center">
+  Sweeps Snapshot Pro
+</h1>
 
-<div class="flex gap-4 mb-6 flex-wrap">
+<p class="text-gray-400 mb-6 text-center">
+  Edge scoring • Trap detection • Bankroll impact • CSV export
+</p>
+
+<div class="flex flex-col sm:flex-row gap-3 mb-6 justify-center">
   <input 
     type="text" 
     id="searchInput"
     placeholder="Search platform..."
-    class="p-2 rounded bg-gray-800 text-white w-64 outline-none"
+    class="p-2 rounded bg-gray-800 text-white w-full sm:w-64 outline-none"
   />
 
   <input 
     type="number" 
     id="bankrollInput"
     placeholder="Your Bankroll ($)"
-    class="p-2 rounded bg-gray-800 text-white w-48 outline-none"
+    class="p-2 rounded bg-gray-800 text-white w-full sm:w-48 outline-none"
   />
 </div>
 
 <div class="overflow-x-auto rounded-lg border border-gray-800">
-<table class="min-w-full text-sm">
-  class="min-w-full text-xs sm:text-sm"
-<thead class="bg-gray-800">
-<tr>
-<th class="p-3 text-left">Platform</th>
-<th class="p-3 text-left">Bonus</th>
-<th class="p-3 text-left">Wager</th>
-<th class="p-3 text-left">Cashback %</th>
-<th class="p-3 text-left">Daily Bonus</th>
-<th class="p-3 text-left">Expires</th>
-<th class="p-3 text-left">Value Score</th>
-<th class="p-3 text-left">Risk</th>
-</tr>
-</thead>
-<tbody id="promoTable"></tbody>
-</table>
+  <table class="min-w-full text-xs sm:text-sm">
+    <thead class="bg-gray-800">
+      <tr>
+        <th class="p-3 text-left">Platform</th>
+        <th class="p-3 text-left">Bonus</th>
+        <th class="p-3 text-left">Wager</th>
+        <th class="p-3 text-left">Cashback %</th>
+        <th class="p-3 text-left">Daily Bonus</th>
+        <th class="p-3 text-left">Expires</th>
+        <th class="p-3 text-left">Value Score</th>
+        <th class="p-3 text-left">Risk</th>
+      </tr>
+    </thead>
+    <tbody id="promoTable"></tbody>
+  </table>
 </div>
 
 <script>
@@ -180,141 +184,9 @@ buildReel("reel3");
 
 /* TOOL */
 const promos = [
-  {
-    platform: "CrownCoins",
-    url: "https://crowncoinscasino.com/?utm_campaign=e5a62c74-1909-4463-a6c8-f958748a9be4&utm_source=friends",
-    bonus: 60,
-    wager: 5,
-    cashback: 5,
-    daily: 1,
-    expires: "2026-03-15"
-  },
-  {
-    platform: "LoneStar Casino",
-    url: "https://lonestarcasino.com/refer/1490917",
-    bonus: 105,
-    wager: 5,
-    cashback: 3,
-    daily: 1,
-    expires: "2026-03-15"
-  },
-  {
-    platform: "Stake.us",
-    url: "https://stake.us/?c=n75tP6HL",
-    bonus: 56,
-    wager: 3,
-    cashback: 8,
-    daily: 1,
-    expires: "2026-03-20"
-  },
-  {
-    platform: "McLuck Casino",
-    url: "https://mcluckcasino.com",
-    bonus: 30,
-    wager: 4,
-    cashback: 2,
-    daily: 1,
-    expires: "2026-03-15"
-  },
-  {
-    platform: "MegaBonanza",
-    url: "https://www.megabonanza.com/?r=336854633",
-    bonus: 50,
-    wager: 4,
-    cashback: 1,
-    daily: 0.8,
-    expires: "2026-03-12"
-  },
-  {
-    platform: "Jackpota",
-    url: "https://www.jackpota.com/?r=411608798",
-    bonus: 35,
-    wager: 3,
-    cashback: 3,
-    daily: 1,
-    expires: "2026-03-22"
-  },
-  {
-    platform: "Sixty6 Casino",
-    url: "https://sixty6casino.com",
-    bonus: 2,
-    wager: 6,
-    cashback: 0,
-    daily: 0.5,
-    expires: "2026-03-10"
-  },
-  {
-    platform: "SweepNext Casino",
-    url: "https://sweepnextcasino.com",
-    bonus: 50,
-    wager: 4,
-    cashback: 2,
-    daily: 0.7,
-    expires: "2026-03-18"
-  },
-  {
-    platform: "Sweet Sweeps Casino",
-    url: "https://sweetsweepscasino.com",
-    bonus: 40,
-    wager: 5,
-    cashback: 2,
-    daily: 0.7,
-    expires: "2026-03-14"
-  },
-  {
-    platform: "Hello Millions",
-    url: "https://hellomillions.com",
-    bonus: 25,
-    wager: 4,
-    cashback: 1,
-    daily: 0.6,
-    expires: "2026-03-15"
-  },
-  {
-    platform: "Rolla Casino",
-    url: "https://rollacasino.com",
-    bonus: 30,
-    wager: 4,
-    cashback: 2,
-    daily: 0.8,
-    expires: "2026-03-15"
-  },
-  {
-    platform: "MyPrize.US",
-    url: "https://myprize.us",
-    bonus: 60,
-    wager: 3,
-    cashback: 3,
-    daily: 1,
-    expires: "2026-03-20"
-  },
-  {
-    platform: "Spree Casino",
-    url: "https://spreecasino.com",
-    bonus: 50,
-    wager: 4,
-    cashback: 2,
-    daily: 0.7,
-    expires: "2026-03-16"
-  },
-  {
-    platform: "Fortune Coins",
-    url: "https://fortunecoins.com",
-    bonus: 20,
-    wager: 5,
-    cashback: 1,
-    daily: 0.4,
-    expires: "2026-03-10"
-  },
-  {
-    platform: "ACE.com Casino",
-    url: "https://ace.com",
-    bonus: 2.5,
-    wager: 5,
-    cashback: 0,
-    daily: 0.5,
-    expires: "2026-03-18"
-  }
+  { platform: "CrownCoins", url: "#", bonus: 60, wager: 5, cashback: 5, daily: 1, expires: "2026-03-15" },
+  { platform: "Stake.us", url: "#", bonus: 56, wager: 3, cashback: 8, daily: 1, expires: "2026-03-20" },
+  { platform: "Jackpota", url: "#", bonus: 35, wager: 3, cashback: 3, daily: 1, expires: "2026-03-22" }
 ];
 
 function calculateValueScore(p) {
@@ -367,5 +239,4 @@ renderTable(promos);
 </script>
 
 </body>
-
 </html>
