--- a/index.html
+++ b/index.html
@@ -1,182 +1,217 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sweeps Snapshot Pro</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Sweeps Snapshot Pro</title>
+<script src="https://cdn.tailwindcss.com"></script>
 
-  <style>
-    body { background: #0f172a; }
+<style>
+body { background:#0f172a; }
 
-    .machine {
-      box-shadow: 0 0 40px rgba(0,255,0,0.15);
-    }
+.machine { box-shadow:0 0 40px rgba(0,255,0,0.15); }
 
-    .reel-container {
-      width: 90px;
-      height: 90px;
-      overflow: hidden;
-      border: 3px solid #1f2937;
-      border-radius: 10px;
-      background: #111827;
-      position: relative;
-    }
+.reel-container{
+  width:90px;
+  height:90px;
+  overflow:hidden;
+  border:3px solid #1f2937;
+  border-radius:10px;
+  background:#111827;
+  position:relative;
+}
 
-    @media (min-width: 640px) {
-      .reel-container {
-        width: 120px;
-        height: 120px;
-      }
-    }
+@media(min-width:640px){
+  .reel-container{
+    width:120px;
+    height:120px;
+  }
+}
 
-    .reel-strip {
-      display: flex;
-      flex-direction: column;
-    }
+.reel-strip{
+  display:flex;
+  flex-direction:column;
+}
 
-    .reel-strip img {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-      padding: 8px;
-    }
+.reel-strip img{
+  width:100%;
+  height:100%;
+  object-fit:contain;
+  padding:8px;
+}
 
-    .win-glow {
-      animation: glow 1s ease-in-out infinite alternate;
-    }
+.win-glow{
+  animation:glow 1s ease-in-out infinite alternate;
+}
 
-    @keyframes glow {
-      from { box-shadow: 0 0 10px rgba(0,255,0,0.2); }
-      to { box-shadow: 0 0 25px rgba(0,255,0,0.7); }
-    }
+@keyframes glow{
+  from{box-shadow:0 0 10px rgba(0,255,0,0.2);}
+  to{box-shadow:0 0 25px rgba(0,255,0,0.7);}
+}
 
-    .site-link {
-      color: #38bdf8;
-    }
-
-    .site-link:hover {
-      text-decoration: underline;
-      color: #60a5fa;
-    }
-  </style>
+.site-link{color:#38bdf8;}
+.site-link:hover{text-decoration:underline;color:#60a5fa;}
+</style>
 </head>
 
 <body class="text-gray-200 min-h-screen px-4 sm:px-8 py-6">
 
 <div class="text-center mb-12">
-  <img src="logo.png" class="w-48 sm:w-64 mx-auto mb-6">
+<img src="logo.png" class="w-48 sm:w-64 mx-auto mb-6">
 
-  <div class="machine bg-gray-900 p-4 sm:p-6 rounded-xl border border-gray-800 w-full max-w-md mx-auto">
-    <div class="flex justify-center gap-4 mb-6">
-      <div class="reel-container"><div class="reel-strip" id="reel1"></div></div>
-      <div class="reel-container"><div class="reel-strip" id="reel2"></div></div>
-      <div class="reel-container"><div class="reel-strip" id="reel3"></div></div>
-    </div>
+<div class="machine bg-gray-900 p-4 sm:p-6 rounded-xl border border-gray-800 w-full max-w-md mx-auto">
+<div class="flex justify-center gap-4 mb-6">
+<div class="reel-container"><div class="reel-strip" id="reel1"></div></div>
+<div class="reel-container"><div class="reel-strip" id="reel2"></div></div>
+<div class="reel-container"><div class="reel-strip" id="reel3"></div></div>
+</div>
 
-    <button onclick="spinReels()" 
-      class="bg-green-600 hover:bg-green-700 px-6 py-2 rounded-lg font-semibold w-full">
-      Spin
-    </button>
-  </div>
+<button onclick="spinReels()" class="bg-green-600 hover:bg-green-700 px-6 py-2 rounded-lg font-semibold w-full">
+Spin
+</button>
+</div>
 </div>
 
 <h1 class="text-2xl sm:text-3xl font-semibold mb-2 tracking-wide text-center">
-  Sweeps Snapshot Pro
+Sweeps Snapshot Pro
 </h1>
 
 <p class="text-gray-400 mb-6 text-center">
-  Edge scoring • Trap detection • Bankroll impact • CSV export
+Edge scoring • Trap detection • Bankroll impact • CSV export
 </p>
 
 <div class="flex flex-col sm:flex-row gap-3 mb-6 justify-center">
-  <input 
-    type="text" 
-    id="searchInput"
-    placeholder="Search platform..."
-    class="p-2 rounded bg-gray-800 text-white w-full sm:w-64 outline-none"
-  />
+<input type="text" id="searchInput" placeholder="Search platform..."
+class="p-2 rounded bg-gray-800 text-white w-full sm:w-64 outline-none"/>
 
-  <input 
-    type="number" 
-    id="bankrollInput"
-    placeholder="Your Bankroll ($)"
-    class="p-2 rounded bg-gray-800 text-white w-full sm:w-48 outline-none"
-  />
+<input type="number" id="bankrollInput" placeholder="Your Bankroll ($)"
+class="p-2 rounded bg-gray-800 text-white w-full sm:w-48 outline-none"/>
 </div>
 
 <div class="overflow-x-auto rounded-lg border border-gray-800">
-  <table class="min-w-full text-xs sm:text-sm">
-    <thead class="bg-gray-800">
-      <tr>
-        <th class="p-3 text-left">Platform</th>
-        <th class="p-3 text-left">Bonus</th>
-        <th class="p-3 text-left">Wager</th>
-        <th class="p-3 text-left">Cashback %</th>
-        <th class="p-3 text-left">Daily Bonus</th>
-        <th class="p-3 text-left">Expires</th>
-        <th class="p-3 text-left">Value Score</th>
-        <th class="p-3 text-left">Risk</th>
-      </tr>
-    </thead>
-    <tbody id="promoTable"></tbody>
-  </table>
+<table class="min-w-full text-xs sm:text-sm">
+<thead class="bg-gray-800">
+<tr>
+<th class="p-3 text-left">Platform</th>
+<th class="p-3 text-left">Bonus</th>
+<th class="p-3 text-left">Wager</th>
+<th class="p-3 text-left">Cashback %</th>
+<th class="p-3 text-left">Daily Bonus</th>
+<th class="p-3 text-left">Expires</th>
+<th class="p-3 text-left">Value Score</th>
+<th class="p-3 text-left">Risk</th>
+</tr>
+</thead>
+<tbody id="promoTable"></tbody>
+</table>
 </div>
 
 <script>
 
-const symbols = ["cherry.png","diamond.png","seven.png","logo.png"];
-const spinLoops = 15;
+const symbols=["cherry.png","diamond.png","seven.png","logo.png"];
+const spinLoops=15;
 
-function buildReel(reelId) {
-  const reel = document.getElementById(reelId);
-  reel.innerHTML = "";
-
-  for (let i = 0; i < spinLoops; i++) {
-    symbols.forEach(symbol => {
-      const img = document.createElement("img");
-      img.src = symbol;
-      reel.appendChild(img);
-    });
-  }
+function buildReel(id){
+const reel=document.getElementById(id);
+reel.innerHTML="";
+for(let i=0;i<spinLoops;i++){
+symbols.forEach(sym=>{
+const img=document.createElement("img");
+img.src=sym;
+reel.appendChild(img);
+});
+}
 }
 
-function spinSingleReel(reelId, delay) {
-  const reel = document.getElementById(reelId);
-  buildReel(reelId);
+function spinSingle(id,delay){
+const reel=document.getElementById(id);
+buildReel(id);
 
-  const container = reel.parentElement;
-  const reelHeight = container.offsetHeight;
-  const totalHeight = reel.scrollHeight - reelHeight;
+const container=reel.parentElement;
+const symbolHeight=container.offsetHeight;
+const totalSymbols=reel.children.length;
+const finalOffset=(totalSymbols-1)*symbolHeight;
 
-  reel.style.transition = "none";
-  reel.style.transform = "translateY(0px)";
+reel.style.transition="none";
+reel.style.transform="translateY(0px)";
 
-  setTimeout(() => {
-    reel.style.transition = `transform ${3 + delay}s cubic-bezier(.17,.67,.12,1.1)`;
-    reel.style.transform = `translateY(-${totalHeight}px)`;
-  }, 100);
+setTimeout(()=>{
+reel.style.transition=`transform ${3+delay}s cubic-bezier(.17,.67,.12,1.1)`;
+reel.style.transform=`translateY(-${finalOffset}px)`;
+},100);
 
-  setTimeout(() => {
-    container.classList.add("win-glow");
-  }, (3000 + delay * 1000));
+setTimeout(()=>{
+container.classList.add("win-glow");
+},3000+(delay*1000));
 }
 
-function spinReels() {
-  document.querySelectorAll(".reel-container").forEach(r => {
-    r.classList.remove("win-glow");
-  });
-
-  spinSingleReel("reel1", 0);
-  spinSingleReel("reel2", 0.5);
-  spinSingleReel("reel3", 1);
+function spinReels(){
+document.querySelectorAll(".reel-container").forEach(r=>r.classList.remove("win-glow"));
+spinSingle("reel1",0);
+spinSingle("reel2",0.5);
+spinSingle("reel3",1);
 }
 
 buildReel("reel1");
 buildReel("reel2");
 buildReel("reel3");
 
-</script>
+/* FULL PROMO LIST RESTORED */
+const promos = [
+{platform:"CrownCoins",bonus:60,wager:5,cashback:5,daily:1,expires:"2026-03-15"},
+{platform:"LoneStar Casino",bonus:105,wager:5,cashback:3,daily:1,expires:"2026-03-15"},
+{platform:"Stake.us",bonus:56,wager:3,cashback:8,daily:1,expires:"2026-03-20"},
+{platform:"McLuck Casino",bonus:30,wager:4,cashback:2,daily:1,expires:"2026-03-15"},
+{platform:"MegaBonanza",bonus:50,wager:4,cashback:1,daily:0.8,expires:"2026-03-12"},
+{platform:"Jackpota",bonus:35,wager:3,cashback:3,daily:1,expires:"2026-03-22"},
+{platform:"Sixty6 Casino",bonus:2,wager:6,cashback:0,daily:0.5,expires:"2026-03-10"},
+{platform:"SweepNext Casino",bonus:50,wager:4,cashback:2,daily:0.7,expires:"2026-03-18"},
+{platform:"Sweet Sweeps Casino",bonus:40,wager:5,cashback:2,daily:0.7,expires:"2026-03-14"},
+{platform:"Hello Millions",bonus:25,wager:4,cashback:1,daily:0.6,expires:"2026-03-15"},
+{platform:"Rolla Casino",bonus:30,wager:4,cashback:2,daily:0.8,expires:"2026-03-15"},
+{platform:"MyPrize.US",bonus:60,wager:3,cashback:3,daily:1,expires:"2026-03-20"},
+{platform:"Spree Casino",bonus:50,wager:4,cashback:2,daily:0.7,expires:"2026-03-16"},
+{platform:"Fortune Coins",bonus:20,wager:5,cashback:1,daily:0.4,expires:"2026-03-10"},
+{platform:"ACE.com Casino",bonus:2.5,wager:5,cashback:0,daily:0.5,expires:"2026-03-18"}
+];
 
+function calculateValueScore(p){
+return ((p.bonus+(p.daily*7))/p.wager+(p.cashback/10)).toFixed(2);
+}
+
+function riskLevel(w){
+if(w<=1)return{label:"Low",color:"text-green-400"};
+if(w<=5)return{label:"Medium",color:"text-yellow-400"};
+return{label:"High",color:"text-red-500"};
+}
+
+function renderTable(data){
+const table=document.getElementById("promoTable");
+table.innerHTML="";
+data.forEach(p=>{
+const score=calculateValueScore(p);
+const risk=riskLevel(p.wager);
+table.innerHTML+=`
+<tr class="border-b border-gray-800">
+<td class="p-3 font-semibold">${p.platform}</td>
+<td class="p-3">$${p.bonus}</td>
+<td class="p-3">${p.wager}x</td>
+<td class="p-3">${p.cashback}%</td>
+<td class="p-3">$${p.daily}</td>
+<td class="p-3">${p.expires}</td>
+<td class="p-3 font-semibold text-green-400">${score}</td>
+<td class="p-3 font-semibold ${risk.color}">${risk.label}</td>
+</tr>`;
+});
+}
+
+document.getElementById("searchInput").addEventListener("input",e=>{
+const value=e.target.value.toLowerCase();
+renderTable(promos.filter(p=>p.platform.toLowerCase().includes(value)));
+});
+
+renderTable(promos);
+
+</script>
 </body>
 </html>
 
